--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+      <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
