Create default donut toppings and types

--- a/app/views/program/index.html.erb
+++ b/app/views/program/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Donut Project Homepage</h1>
+<%= button_to 'Configure default donut types', program_add_various_donut_types_path , method: :post  %>
+<%= button_to 'Configure default donut toppings', program_add_various_donut_toppings_path , method: :post  %>
 <p></p>
