--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Donut Project</span></a>
+        <a class="nav-link" href="/">Donut Project Homepage</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donut_types#index">Donut Types</a>
+        <a class="nav-link" href="donut_types#index">Manage Donut Types</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donut_toppings#index">Donut Toppings</a>
+        <a class="nav-link" href="donut_toppings#index">Manage Donut Toppings</a>
       </li>
     </ul>
   </div>
