Add basic orders_controller and view

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" href="donut_toppings#index">Manage Donut Toppings</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="orders#index">Manage Orders</a>
+      </li>
     </ul>
   </div>
 </nav>
