Add donut topping view form

--- a/app/views/donut_toppings/_donut_topping.html.erb
+++ b/app/views/donut_toppings/_donut_topping.html.erb
@@ -1,2 +1,22 @@
 <div id="<%= dom_id donut_topping %>">
+  <p>
+    <strong>Name:</strong>
+    <%= donut_topping.name %>
+  </p>
+
+  <p>
+    <strong>Sold out until:</strong>
+    <%= donut_topping.sold_out_until %>
+  </p>
+
+  <p>
+    <strong>Discontinued:</strong>
+    <%= donut_topping.discontinued %>
+  </p>
+
+  <p>
+    <strong>Price:</strong>
+    <%= donut_topping.price %>
+  </p>
+
 </div>
