--- a/app/views/donut_toppings/_form.html.erb
+++ b/app/views/donut_toppings/_form.html.erb
@@ -11,6 +11,26 @@
     </div>
   <% end %>
 
+ <div>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
+    <%= form.label :sold_out_until, style: "display: block" %>
+    <%= form.date_field :sold_out_until %>
+  </div>
+
+  <div>
+    <%= form.label :discontinued, style: "display: block" %>
+    <%= form.check_box :discontinued %>
+  </div>
+
+  <div>
+    <%= form.label :price, style: "display: block" %>
+    <%= form.text_field :price %>
+  </div>
+
   <div>
     <%= form.submit %>
   </div>
