--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/">Donut Project Homepage</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donut_types#index">Manage Donut Types</a>
+        <a class="nav-link" href="/donut_types">Manage Donut Types</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donut_toppings#index">Manage Donut Toppings</a>
+        <a class="nav-link" href="/donut_toppings">Manage Donut Toppings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="orders#index">Manage Orders</a>
+        <a class="nav-link" href="/orders">Manage Orders</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/orders/new">Make an order</a>
       </li>
     </ul>
   </div>
