--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: order) do |form| %>
+<%= form_with(model: order) do |f| %>
   <% if order.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -10,28 +10,34 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+<h2> Customer:</h2>
+  <%= f.fields_for :customer do |customer_form| %>
+   <div>
+    <%= customer_form.label :name, style: "display: block" %>
+    <%= customer_form.text_field :name %>
+    <%= customer_form.label :phone, style: "display: block" %>
+    <%= customer_form.text_field :phone %>
   </div>
+  <% end %>
 
-  <div>
-    <%= form.label :sold_out_until, style: "display: block" %>
-    <%= form.date_field :sold_out_until %>
+  <h2> Donuts Item:</h2>
+  <%= f.fields_for :donut_order_items do |item_form| %>
+   <div>
+    <%= item_form.label :quantity, style: "display: block" %>
+    <%= item_form.select( :quantity, options_for_select(1..24)) %>
   </div>
+    <%= f.fields_for :donut_types do |type_form| %>
+      <%= type_form.collection_select :id, @donut_types,:id, :full_name,{disabled: -> (donut_type) { donut_type.is_sold_out }, prompt: "Select Donut Type"} %>
+    <% end %>
 
+    <%= f.fields_for :donut_toppings do |topping_form| %>
+      <%= topping_form.collection_select :id, @donut_toppings,:id, :full_name, {disabled: -> (donut_topping) { donut_topping.is_sold_out }, prompt: "Select Donut Topping"} %>
+    <% end %>
+  <% end %>
   <div>
-    <%= form.label :discontinued, style: "display: block" %>
-    <%= form.check_box :discontinued %>
+    <%= button_to "Add Donut", method: :get %>
   </div>
-
   <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
